[gd_scene load_steps=13 format=3 uid="uid://ctoap6e1xmr6y"]

[ext_resource type="Script" path="res://multiplayer/menuLAN.gd" id="1_s6sxb"]
[ext_resource type="Texture2D" uid="uid://c6hryfrcuwu7c" path="res://screens/assets/character_selection_screen.png" id="2_c13qs"]
[ext_resource type="FontFile" uid="uid://be5qc06kpexri" path="res://screens/assets/font_hey_comic.ttf" id="3_ce388"]
[ext_resource type="Texture2D" uid="uid://c7016hjaugxcy" path="res://characters/assets/cats_dogs.png" id="4_qc0du"]
[ext_resource type="Texture2D" uid="uid://c3khujmfv6deo" path="res://screens/assets/background_choose_character.png" id="4_qcfy7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dtfml"]
content_margin_left = 30.0
content_margin_top = 40.0
content_margin_bottom = 50.0
texture = ExtResource("4_qcfy7")
region_rect = Rect2(0, 0, 773, 655)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6cdh"]
bg_color = Color(0.156863, 0.105882, 0.027451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4jqf"]
bg_color = Color(0.796078, 0.768627, 0.682353, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 6
border_color = Color(0.156863, 0.105882, 0.027451, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="Theme" id="Theme_jxcg2"]
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(0.239216, 0.168627, 0.0588235, 1)
Button/fonts/font = null
Button/styles/hover = SubResource("StyleBoxFlat_s6cdh")
Button/styles/normal = SubResource("StyleBoxFlat_a4jqf")
Button/styles/pressed = SubResource("StyleBoxFlat_a4jqf")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_uc4u0"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_mopw2"]
line_spacing = 10.0
font = ExtResource("3_ce388")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_bmwoo"]
line_spacing = 10.0
font = ExtResource("3_ce388")
font_size = 28

[node name="LAN" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6sxb")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1440.0
offset_bottom = 810.0
texture = ExtResource("2_c13qs")

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 175.0
offset_right = 957.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 45
text = "ENTRAR EM UMA SALA
"
horizontal_alignment = 1

[node name="ListPlayers" type="ItemList" parent="."]
visible = false
layout_mode = 0
offset_left = 655.0
offset_top = 300.0
offset_right = 929.0
offset_bottom = 629.0
theme_override_colors/font_color = Color(0.184314, 0.180392, 0.14902, 1)
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 22
theme_override_styles/panel = SubResource("StyleBoxTexture_dtfml")

[node name="Create" type="Button" parent="."]
visible = false
layout_mode = 1
offset_left = 232.0
offset_top = 403.0
offset_right = 586.0
offset_bottom = 453.0
theme = SubResource("Theme_jxcg2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 28
text = "Criar Sala"

[node name="Connect" type="Button" parent="."]
layout_mode = 1
offset_left = 224.0
offset_top = 577.0
offset_right = 580.0
offset_bottom = 627.0
theme = SubResource("Theme_jxcg2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 28
text = "Procurar Sala"

[node name="Start" type="Button" parent="."]
visible = false
layout_mode = 1
offset_left = 971.0
offset_top = 586.0
offset_right = 1244.0
offset_bottom = 636.0
theme = SubResource("Theme_jxcg2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 28
text = "Começar jogo"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Start"]
replication_config = SubResource("SceneReplicationConfig_uc4u0")

[node name="IpEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 413.0
offset_right = 599.0
offset_bottom = 461.0
theme_override_font_sizes/font_size = 24
placeholder_text = "127.0.0.1"

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = 304.0
offset_right = 602.0
offset_bottom = 355.0
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 24
text = "Jogador"
placeholder_text = "Jogador"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 209.0
offset_top = 414.0
offset_right = 407.0
offset_bottom = 455.0
text = "Código da Sala:"
label_settings = SubResource("LabelSettings_mopw2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 303.0
offset_right = 321.0
offset_bottom = 344.0
theme_override_fonts/font = ExtResource("3_ce388")
text = "Nome:"
label_settings = SubResource("LabelSettings_bmwoo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoIP" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 215.0
offset_top = 577.0
offset_right = 603.0
offset_bottom = 656.0
theme_override_font_sizes/font_size = 27
autowrap_mode = 1

[node name="InfoIP2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 217.0
offset_top = 490.0
offset_right = 605.0
offset_bottom = 569.0
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 28
text = "Código para seus amigos se conectar na sala:"
autowrap_mode = 1

[node name="ErroPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -99.0
offset_right = 157.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ErroPanel"]
layout_mode = 0
offset_right = 321.0
offset_bottom = 145.0
text = "Ocorreu um erro
Tente novamente"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ErroPanel"]
layout_mode = 0
offset_left = 92.0
offset_top = 145.0
offset_right = 243.0
offset_bottom = 171.0
text = "Confirmar"

[node name="ChoiceCharacter" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 974.0
offset_top = 466.0
offset_right = 1236.0
offset_bottom = 553.0
theme = SubResource("Theme_jxcg2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ce388")
theme_override_font_sizes/font_size = 28
text = "Escolher 
Personagem"

[node name="ContainerChoiceCharacter" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 972.0
offset_top = 269.0
offset_right = 1231.0
offset_bottom = 442.0

[node name="TextureChoiceCharacter" type="Sprite2D" parent="ContainerChoiceCharacter"]
position = Vector2(134, 94)
scale = Vector2(0.551758, 0.564453)
texture = ExtResource("4_qc0du")
hframes = 12
vframes = 8
frame = 68

[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="text_changed" from="NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="pressed" from="ErroPanel/Button" to="." method="_on_erropanel_button_pressed"]
[connection signal="pressed" from="ChoiceCharacter" to="." method="_on_choice_character_pressed"]
